# esp32-calendar

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions_32MB.csv  sdkconfig.console.jtag  sdkconfig.defaults  sdkconfig.defaults.esp32p4
application/edge_agent/components/calendar_home/: CMakeLists.txt  Kconfig  idf_component.yml
application/edge_agent/components/calendar_home/src/: calendar_board_data.c  calendar_board_data.h  calendar_font_digits_28.c  calendar_font_digits_48.c  calendar_font_fusion_28.c  calendar_font_fusion_48.c  calendar_font_zh.c  calendar_font_zh.h  calendar_home.c  calendar_model.c  calendar_model.h  calendar_ui.c
components/claw_capabilities/cap_im_platform/: CMakeLists.txt  idf_component.yml
components/claw_capabilities/cap_im_platform/include/: cap_im_attachment.h  cap_im_feishu.h  cap_im_platform.h  cap_im_qq.h  cap_im_tg.h  cap_im_wechat.h  cmd_cap_im_feishu.h  cmd_cap_im_qq.h  cmd_cap_im_tg.h  cmd_cap_im_wechat.h
components/claw_capabilities/cap_im_platform/skills/cap_im_platform/: SKILL.md
components/claw_capabilities/cap_im_platform/src/: cap_im_attachment.c  cap_im_feishu.c  cap_im_platform.c  cap_im_qq.c  cap_im_tg.c  cap_im_wechat.c  cmd_cap_im_feishu.c  cmd_cap_im_qq.c  cmd_cap_im_tg.c  cmd_cap_im_wechat.c
components/claw_capabilities/cap_lua/: CMakeLists.txt  idf_component.yml
components/claw_capabilities/cap_lua/include/: cap_lua.h  cmd_cap_lua.h
components/claw_capabilities/cap_lua/src/: cap_lua.c  cap_lua_async.c  cap_lua_internal.h  cap_lua_runtime.c  cmd_cap_lua.c
components/claw_capabilities/cap_mcp_client/: CMakeLists.txt
components/claw_capabilities/cap_mcp_client/include/: cap_mcp_client.h
components/claw_capabilities/cap_mcp_client/src/: cap_mcp_client.c  cap_mcp_client_core.c  cap_mcp_discover_core.c
components/claw_capabilities/cap_mcp_client/src/priv_include/: cap_mcp_client_priv.h
components/claw_modules/claw_core/: CMakeLists.txt  Kconfig  idf_component.yml
components/claw_modules/claw_core/include/: claw_core.h  claw_paths.h  claw_task.h  claw_version.h
components/claw_modules/claw_core/src/: claw_core.c  claw_core_agent_loop.c  claw_core_context.c  claw_core_context_persist.c  claw_core_control.c  claw_core_events.c  claw_core_internal.h  claw_core_llm.c  claw_core_llm.h  claw_core_messages.c  claw_core_utils.c  claw_paths.c  claw_task.c  claw_version.c
components/claw_modules/claw_core/src/llm/: claw_llm_http_transport.c  claw_llm_http_transport.h  claw_llm_runtime.c  claw_llm_runtime.h  claw_llm_types.h
components/claw_modules/claw_core/test_apps/core_interrupt_test/: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/common/emote/: CMakeLists.txt  emote.c  idf_component.yml
components/common/emote/include/: emote.h
components/lua_modules/lua_module_ble/: CMakeLists.txt  README.md
components/lua_modules/lua_module_ble/skills/ble/: SKILL.md
components/lua_modules/lua_module_ble/src/: lua_module_ble.c  lua_module_ble.h  lua_module_ble_events.c  lua_module_ble_gap.c  lua_module_ble_gatts.c  lua_module_ble_priv.h  lua_module_ble_smp.c  lua_module_ble_stack.c  lua_module_ble_utils.c
components/lua_modules/lua_module_ble/test/: test_ble.lua  test_ble_connections.lua  test_ble_events.lua  test_ble_gatts.lua  test_ble_smp.lua
components/lua_modules/lua_module_display/: CMakeLists.txt  README.md  idf_component.yml
components/lua_modules/lua_module_display/src/: display_color.c  display_color.h  display_dirty.c  display_dirty.h  display_hal.c  display_hal.h  display_text.c  display_text.h  lua_module_display.c
components/lua_modules/lua_module_display/test/: display_pixels_demo.lua  display_shapes.lua  display_text_style_demo.lua
components/lua_modules/lua_module_imu/: CMakeLists.txt  idf_component.yml
components/lua_modules/lua_module_imu/src/: lua_module_imu.c  lua_module_imu.h  lua_module_imu_backend.h
components/lua_modules/lua_module_imu/src/bmi270/: bmi270_backend.c
components/lua_modules/lua_module_lvgl/: CMakeLists.txt  README.md  idf_component.yml
components/lua_modules/lua_module_lvgl/src/: lua_lvgl_complex_widgets.c  lua_lvgl_core_widgets.c  lua_lvgl_demos.c  lua_lvgl_events.c  lua_lvgl_extra_widgets.c  lua_lvgl_font.c  lua_lvgl_indev.c  lua_lvgl_layout.c  lua_lvgl_methods.c  lua_lvgl_object.c  lua_lvgl_parse.c  lua_lvgl_private.h  lua_lvgl_runtime.c  lua_lvgl_runtime.h  lua_lvgl_style.c  lua_lvgl_value.c  lua_module_lvgl.c  lua_module_lvgl.h
components/lua_modules/lua_module_lvgl/test/: lvgl_basic.lua  lvgl_demos.lua  lvgl_events.lua  lvgl_indev.lua  lvgl_ttf_font.lua  lvgl_widgets_test.lua
components/lua_modules/lua_module_magnetometer/: CMakeLists.txt  Kconfig  README.md
components/lua_modules/lua_module_magnetometer/src/: lua_module_mag_backend.h  lua_module_magnetometer.c  lua_module_magnetometer.h
components/lua_modules/lua_module_vision/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/lua_modules/lua_module_vision/src/: espdet.cpp  espdet.h  lua_module_vision.c  lua_module_vision.h  motion_detect.cpp  motion_detect.h
components/lua_modules/lua_module_vision/test/: camera_display_motion.lua  espdet_camera.lua  espdet_image.lua  motion_detect.lua
components/voice_assistant_sdk/: CMakeLists.txt  Kconfig
components/voice_assistant_sdk/include/: voice_assistant.h
components/voice_assistant_sdk/src/: voice_assistant.c  voice_audio.c  voice_board_waveshare_rlcd_4_2.c  voice_esp_sr_local.c  voice_internal.h  voice_protocol.c  voice_state.c  voice_transport_ws.c  voice_tts.c
main/: CMakeLists.txt  Kconfig.projbuild  app_fs.c  idf_component.yml  main.c
sim/: CMakeLists.txt  README.md  lv_conf.h  main_sdl.c  png_writer.c  png_writer.h
tests/: CMakeLists.txt  test_architecture_contracts.py  test_calendar_board_data_contracts.py  test_calendar_model.c  test_calendar_ui_layout.py  test_check_font_coverage.py  test_generate_zh_font.py  test_local_tts.c  test_png_writer.c  test_render_png_check.py  test_rlcd_log_to_png.py  test_rlcd_mono_buffer.c  test_time_sync_contracts.py  test_voice_assistant_sdk.c
(+693 files in other folders)
