idf_component_register(
    SRCS
        "src/display_color.c"
        "src/display_dirty.c"
        "src/display_hal.c"
        "src/display_text.c"
        "src/lua_module_display.c"
    INCLUDE_DIRS
        "src"
    REQUIRES
        cap_lua
        display_arbiter
        esp_lcd
        esp_painter
        lua_module_image
)
